# alphafold_fuse_debian

./: .gitignore  DEBIAN.md  INSTALL.md  Makefile  README.md  alphafold_fuse.py  db_builder.py  main.py  nmrbox-alphafuse.service  requirements.txt  setup.cfg  update_updatedb.py
debian/: changelog  control  copyright  dirs  install  postinst  postrm  preinst  prerm  rules
src/alphafoldfuse/: alphafold_fuse.py  mountcontrol.py
