[metadata]
name = alphafold_fuse
#version = attr: example.__version__
author = Jon Wedell 
author_email = wedell@uchc.edu 
description = Provide access to alphafold database
long_description = file: README.md
long_description_content_type = text/markdown

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	alphafoldfuse	
install_requires =
	fuse-python==1.0.5
	psutil~=5.9

[options.entry_points]
console_scripts = 
	alphafold_fuse = alphafoldfuse.alphafold_fuse:main
	mountcontrol = alphafoldfuse.mountcontrol:main

[build_ext]
#debug = 1

[options.package_data]
#example = data/schema.json, *.txt
* = README.md
